--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,14 @@ img{
     margin-bottom: 2rem;
 }
 
+.boton{
+    border: none;
+}
+
+.boton:hover{
+    cursor: pointer;
+}
+
 @media(min-width: 768px) {
     .boton{
         display: inline-block;
@@ -239,3 +247,38 @@ img{
 .curso:last-of-type{
     border: none;
 }
+
+/*Contacto*/
+.contacto-bg{
+    background-image: url(../img/contacto.jpg);
+    height: 40rem;
+    background-size: cover;
+}
+
+.formulario{
+    background-color: var(--blanco);
+    margin: -5rem auto 0 auto;
+    width: 95%;
+    padding: 5rem;
+}
+
+.campo{
+    display: flex;
+    margin-bottom: 2rem;
+}
+
+.campo__label{
+    flex: 0 0 9rem;
+    text-align: right;
+    padding-right: 2rem;
+}
+
+.campo__field{
+    flex: 1;
+    border: 1px solid var(--gris);
+}
+
+.campo__field--textarea{
+    height: 20rem;
+}
+
